[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
colored = "2.0.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
aes-gcm = "0.10.3"
base64 = "0.21.5"
argon2 = "0.5.2"
clap = { version = "4.4.7", features = ["derive"] }
rpassword = "7.3.1"
anyhow = "1.0.75"
